tests/baselines/reference/ES5For-of1.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of1.ts(2,5): error TS2552: Cannot find name 'console'. Did you mean 'Boolean'?


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of1.ts (1 errors) ====
    for (var v of ['a', 'b', 'c']) {
        console.log(v);
        ~~~~~~~
!!! error TS2552: Cannot find name 'console'. Did you mean 'Boolean'?
    }